--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,4 @@
-@charset "utf-8";
-/* CSS Document */
-
-body { font-family: arial; font-size:12px; background:url("/images/pagebg.jpg") repeat-x top left;}
+body { font-family: arial; font-size:12px; background:url("/images/tile.png") repeat left top;margin: 0}
 ul, p, h1, h2, h3, h4 { margin:0; padding:0; list-style:none;}
 h1 {font-family:arial; font-size:36px; color:#355f7a; text-align:center;}
 img {border:none;}
@@ -9,279 +6,92 @@ img {border:none;}
 .left { float:left;}
 
 .clr { clear:both;} 
-.page-margin { width:950px; margin:0 auto;}
-.logo { float:left; padding-left:20px;}
-.top-block { float:right; margin-top:30px; padding: 5px 0 0 20px;}
-.top-block { text-align:right;}
-.top-block a { padding: 0 2px 0 2px; color: #37627D;text-decoration: none;}
-.top-block a:hover { padding: 0 2px 0 2px; color: #37627D;text-decoration: underline;font-weight:bold}
+.page-margin { width:1130px; margin:0 auto;}
 
-.top-block ul {
+#top-bg{
+    position: absolute;
+    background:url("/images/image_bg.jpg");
+    width: 1130px;
+    height: 420px;
+    z-index: -1;
+    display: none;
+}
+
+.header-logo{
+    height: 140px;
+    width: 240px;
+    background: #FFFFFF;
+}
+
+.header-logo img {
+    padding: 15px 0 0 5px;
+}
+
+.social-connect{
+    padding: 46px 10px 0 0;
+}
+
+.right {
     float: right;
+}
+
+.left-content{
+    width: 240px;
+    float: left;
+}
+
+.nav-bar {}
+.nav-bar ul { background:#a5986f;width :240px;}
+.nav-bar li{ height: 40px;}
+.nav-bar li div{ padding: 13px 0 0 15px;}
+.nav-bar a { color:white; text-decoration:none; text-transform:uppercase; font-size:12px;font-weight:bold;}
+.nav-bar a:hover { text-decoration:underline}
+.nav-bar li.current{background:#2d78d3}
+
+.footer {}
+.foot-nav { margin-top:20px;}
+.foot-nav ul {width:1130px; }
+.foot-nav li{ float:left; padding-top:10px; color:#666;}
+.foot-nav .user-link { float:right; margin: 10px 10px 0 20px; font-size: 12px;}
+
+.foot-nav a { color:#b1c8e3; text-decoration:none; font-weight: bold; font-size:14px; padding:7px 10px 7px 10px;}
+.foot-nav li.user-link a{
+    color: #FFFFFF;
+    font-size: 16px;
+}
+
+.foot-nav a:hover { text-decoration:underline}
+.foot-nav li.current a{ }
+
+.language-bar{
+    background: #25a59b;
+    height: 40px;
+}
+
+.language-bar a { padding: 0 2px 0 2px; color: #FFF;text-decoration: none;}
+.language-bar a:hover { padding: 0 2px 0 2px; text-decoration: underline;font-weight:bold}
+
+.language-bar ul {
     list-style: none outside none;
     margin: 0 0 0 auto;
     font-size: 12px;
-    padding: 0;
+    padding: 13px 0 0 15px;
 }
 
-.top-block li {
-    border-right: 1px dotted #999999;
+.language-bar li {
+    border-right: 1px dotted #FFF;
     float: left;
     margin: 0 0.3em;
     padding: 0 0.7em 0 0.2em;
     text-align: center;
 }
 
-.top-block li.last {
+.language-bar li.last {
     border: medium none;
     margin-right: 0;
     padding-right: 0;
 }
-.search-block { background:url("/images/search-bg.png") no-repeat; width:329px; height:30px; margin-top:5px;}
-.search-block input { border:none; width:289px; background:transparent;}
-.search-block img { position:relative ; top:3px; right:10px;}
 
-.nav { margin-top:20px;}
-.nav ul { background:url("/images/navbg.jpg") no-repeat; height:30px; width:950px; padding-left:10px;}
-.nav li{ float:left; padding-top:10px;}
-.nav li.user-link { float:right; padding-left:20px; padding-right:10px;}
-
-.nav a { color:white; text-decoration:none; text-transform:uppercase; font-size:11px; padding:7px 9px 7px 9px;font-weight:bold;}
-.nav a:hover { color:#acfff6;}
-.nav li.current a{ color:#acfff6; background:url("/images/seleted-item.png") bottom center no-repeat;}
-
-
-.index .left { width: 655px;}
-.index .right { margin-left:640px; padding-left:30px;}
-.page-title { width:240px; float:left; text-align:center;} 
-.page-title span { font-family:times new roman; font-size:28px; color:#858585;}
-.page-content { margin-left:250px; padding:0 10px; background:#ecf6fb; line-height:18px;}
-.page-content p {padding : 12px 0}
-.page-content-all { margin-left:0px; padding:0 10px; background:#ecf6fb; line-height:18px;}
-.page-content-all p {padding : 12px 0}
-.title-1 {font-family:arial; color:#37627d; font-size:18px; padding-left:10px; border-left:3px solid #37627d; border-bottom:1px solid #ddd;}
-.testo { margin-top:20px; font-family:times new roman; color:#666; font-size:14px; background:#eee; padding:5px;}
-.testo p { margin-left:70px;}
-.testo img { float:left; padding-right:10px; padding-bottom:20px;}
-
-.right-menu-block {padding-bottom:20px;}
-.right-menu-block li{ padding:5px 0 0 15px;}
-.right-menu-block a { color:#355F7A; text-decoration:none; font-weight:bold;}
-.right-menu-block a:hover { color:#acfff6;}
-
-.home-contact-block { margin-top:20px;}
-.home-contant-content { padding: 10px 0 0 10px;}
-
-.home-workinghour-block { background:#ddd; color:#355f7a;}
-.home-workinghour-block li{ padding:5px;}
-.home-workinghour-block li div { float:left; width:100px;}
-.home-workinghour-block p { margin-left:100px;}
-.wh-title {border-bottom:1px solid #ddd;}
-.whitebg {background:#eee;}
-
-.blue { color:#355f7a;}
-
-.footer {}
-.foot-nav { margin-top:20px; border-bottom:2px solid #7cbde1;}
-.foot-nav ul {height:30px; width:950px; padding-left:10px;}
-.foot-nav li{ float:left; padding-top:10px; color:#666;}
-.foot-nav li.user-link { float:right; padding-left:20px; padding-right:10px;}
-
-.foot-nav a { color:#666; text-decoration:none; font-size:11px; padding:7px 10px 7px 10px;}
-.foot-nav a:hover { color:#111;}
-.foot-nav li.current a{ color:#111;}
-
-.copyright-block .left div { position:relative; top:-15px;display:inline}
-.copyright-block .right {float:right;}
-
-.about .left { width: 655px;}
-.about .right { margin-left:640px; padding-left:30px;}
-
-.index .page-content a { color : #355F7A; font-weight:bold;}
-.about .page-content a { color : #355F7A; font-weight:bold;}
-.contact { margin-top:20px;}
-.contact .left { width: 635px;}
-.contact .right { margin-left:640px; padding-left:30px;}
-
-.page-content { margin-right:7px;}
-.page-content label { float:left; width:100px; margin-top:7px; text-align:right; padding-right:20px;}
-.page-content input { width:220px; padding:5px; border:1px solid #333;}
-.page-content select { padding:5px; border:1px solid #333;}
-.page-content textarea { padding:5px; border:1px solid #333; width:220px;}
-.page-content input[type=button] { width:70px; background-color:#355f7a; border:none; color:white;} 
-.page-content input[type=button] { width:70px; background-color:#355f7a; border:none; color:white;} 
-.left-banner {margin-bottom:10px;}
-
-.link { margin:15px 0 0 0; border-bottom:1px solid #ccc; padding-bottom:15px;} 
-.link span { font-weight:bold; font-size:16px;}
-
-.question { margin:15px 0 0 0; border-bottom:1px solid #ccc; padding-bottom:15px;}
-.question input[type=radio] { width:20px;}
-.question input[type=checkbox] { width:20px;}
-.question input { width:50px;}
-
-.news { margin-top:0px;}
-.news .left { width: 635px;}
-.news .right { margin-left:640px; padding-left:30px;}
-
-.news .page-content { margin-left:0; background:#fff;}
-.news .page-content img { float:left; padding: 0 10px 10px 0;}
-.news-header { border-bottom:1px solid #ddd; text-align:left; margin-bottom:20px;}
-.news-header h1 { text-align:left;}
-.news-title { font-size:16px; font-weight:bold; color:black; margin-bottom:20px;}
-
-.all-news .title {margin-top:30px;}
-.all-news ul { list-style:circle; }
-.all-news li { padding-bottom:8px; }
-.list-news { padding-left:30px; margin-bottom:50px;}
-.list-news a { color:#0d668b;font-weight:bold;text-decoration:none;font-size:13px;}
-.list-news a:hover { color:#0d668b; text-decoration:underline;}
-.news-title-text {color:#000000; font-weight:bold;font-size:13px;}
-.news-date {
-    color: #999999;
-    font-size: 11px;
-}
-.related-news .title {margin-top:30px;}
-.related-news hr { margin-left:85px; margin-top:-5px;}
-.related-news ul { list-style:circle; }
-
-.r-news { padding-left:30px; margin-bottom:50px;}
-.r-news a { color:#0d668b; text-decoration:none;}
-.r-news a:hover { color:#0d668b; text-decoration:underline;}
-
-.faq .left { width: 655px;}
-.faq .right { margin-left:640px; padding-left:30px;}
-
-.faq .page-content { margin-left:0;}
-.faq .page-content span { font-weight:bold; font-size:14px; color:#3b637e; text-decoration:underline;}
-
-.top-banner-normal {padding-bottom:10px;}
-
-.list_results table, .list_results td, .list_results th
-{
-    border-color: #BDC7D8;
-    border-style: solid;
-}
-
-.list_results table
-{
-    border-width: 0 0 1px 1px;
-    border-spacing: 0;
-    border-collapse: collapse;
-}
-
-.list_results td
-{
-    margin: 0;
-    padding: 4px;
-    border-width: 1px 1px 0 0;
-}
-
-.list_results th
-{
-    margin: 0;
-    padding: 4px;
-    border-width: 1px 1px 0 0;
-    font-weight : bold;
-    color: #355F7A;
-}
-
-.list_results a:link, .list_results a:visited, .list_results a:active {
-    color: #666666;
-    text-decoration: none;
-}
-
-.list_results a:hover {
-    color: #666666;
-    text-decoration: underline;
-}
-
-.form_message {
-	color: #008800;
-	font-weight: bold;
-}
-
-.form_error {
-	color: #880000;
-	font-weight: bold;
-}
-
-.form-title {
-	font-size: 11pt;
-	height: 20px;
-	border-bottom: 1px solid #888888;
-	padding: 2px;
-	margin-bottom: 5px;
-	font-weight: bold;
-}
-
-.form_message_error {
-	color: #880000;
-	font-style: italic;
-}
-
-.form_input_error {
-	background-color: #FFCCCC;
-}
-
-.login-cont {
-    height: 340px;
-    min-height: 340px;
-    padding-top: 30px;
-}
-
-.login-block {
-    border: 1px solid #CCCCCC;
-    margin: 0 auto;
-    padding: 10px;
-    text-align: left;
-    vertical-align: middle;
-    width: 300px;
-}
-
-.login-title {
-    border-bottom: 1px solid #CCCCCC;
-    font-size: 14px;
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-}
-
-.login-messages {
-    color: #FF0000;
-    font-weight: bold;
-    padding: 10px;
-    text-align: center;
-}
-
-.login-block label, .login-block input {
-    margin-top: 5px;
-}
-
-.login-block label {
-    float: left;
-    width: 100px;
-}
-
-.login-block input {
-    width: 180px;
-}
-
-.login-block label, .login-block input {
-    margin-top: 5px;
-}
-
-.hintTxt{
-	color: #AAAAAA;
-}
-
-.focusTxt{
-	color: #000000;
-	font-weight:bold;
-}
-
-.fb-likebox{
-	margin: 20px 0 0 10px;
-}
 #container-language div
 {	
 	position: absolute;
@@ -314,71 +124,348 @@ img {border:none;}
 	font-weight:bold;
 }
 
-.home-contant-content a{
-	color: #355F7A;
-  text-decoration: underline;
+.banner-image {    
+    width: 890px;
+    height: 400px;
+    position: relative;
 }
 
-.-cx-PRIVATE-fbMarketingVideo__link{background-color:#000;display:block;position:relative;width:340px;height:182px}
-.-cx-PRIVATE-fbMarketingVideo__link:hover{text-decoration:none}
-.-cx-PRIVATE-fbMarketingVideo__link:hover .-cx-PRIVATE-fbMarketingVideo__placeholder{opacity:.3}
-.-cx-PRIVATE-fbMarketingVideo__link:hover .-cx-PRIVATE-fbMarketingVideo__text{opacity:1}
+.index-banner{
+    background:url("/images/banner/banner_1.jpg");
+}
 
-.staff { margin-top:0px;}
-.staff .left { width: 635px;}
-.staff .right { margin-left:640px; padding-left:30px;}
+.about-banner{
+    background:url("/images/banner/banner_2.jpg");
+}
 
-.staff .page-content { margin-left:0; background:#fff;}
-.staff .page-content img { float:left; padding: 0 10px 10px 0;}
-.staff-header { border-bottom:1px solid #ddd; text-align:left; margin-bottom:20px;}
-.staff-header h1 { text-align:left;}
-.staff-title { font-size:16px; font-weight:bold; color:black; margin-bottom:20px;}
+.staff-banner{
+    background:url("/images/banner/banner_3.jpg");
+}
 
-.biographies .item{position:relative}
-.biographies .item .item-assets{padding-top:0px}
-.biographies .item .item-summary{padding-bottom:1px}
-.biographies .item{margin-bottom:1em;border-bottom:1px solid #ddd;padding-bottom:1em}
-.biographies .item img{width:160px;border:1px solid #ddd;padding:2px}
-.biographies .item .item-summary,.news .item .item-summary{width:400px;float:left}
-.biographies .item .item-assets,.news .item .item-assets{width:162px;float:right}
+.location-banner{
+    background:url("/images/banner/banner_4.jpg");
+}
 
-.newslettlers_wrapper {
-    width: 206px;float: left;padding: 0px 17px 15px 0px;
+.faq-banner{
+    background:url("/images/banner/banner_5.jpg");
+}
+
+.insurance-banner{
+    background:url("/images/banner/banner_6.jpg");
+}
+
+.contact-banner{
+    background:url("/images/banner/banner_11.jpg");
+}
+
+.news-banner{
+    background:url("/images/banner/banner_7.jpg");
+}
+
+.links-banner{
+    background:url("/images/banner/banner_8.jpg");
 }
 
 
-.wrapper_right{
-    padding-right: 0px !important;
+.banner-image .banne-slogan{
+    position : absolute;
+    bottom : 0;
+    background: #000;
+    color: #FFF;
+    font-weight: bold;
+    font-size: 35px;
+    width: 890px;
+    height: 60px;
+    /* IE 8 */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
+  /* IE 5-7 */
+  filter: alpha(opacity=40);
+  /* Netscape */
+  -moz-opacity: 0.4;
+  /* Safari 1.x */
+  -khtml-opacity: 0.4;
+  /* Good browsers */
+  opacity: 0.4;
 }
 
-.newslettlers_wrapper .container{
-    -webkit-border-radius: 3px;
-    -moz-border-radius: 3px;
-    -ms-border-radius: 3px;
-    -o-border-radius: 3px;
-    border-radius: 3px;
-    -webkit-box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
-    -moz-box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
-    box-shadow: 0 1px 3px 0 rgba(0,0,0,0.33);
-    background: #fff;
-    
-    cursor: pointer;
-    cursor: -webkit-zoom-in;
-    cursor: -moz-zoom-in;
-    cursor: zoom-in;
+.banner-image .banne-slogan div {
+    padding: 10px 0 0 15px;
+    /* IE 8 */
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+  /* IE 5-7 */
+  filter: alpha(opacity=100);
+  /* Netscape */
+  -moz-opacity: 1;
+  /* Safari 1.x */
+  -khtml-opacity: 1;
+  /* Good browsers */
+  opacity: 1;    
 }
 
-.newslettlers_wrapper .container a {
-    cursor: pointer;
-    cursor: -webkit-zoom-in;
-    cursor: -moz-zoom-in;
-    cursor: zoom-in;
+.sprite { background: url('/images/sprite.png') no-repeat top left;  } 
+.sprite.icon_add { background-position: 0px 0px; width: 25px; height: 25px; padding-right: 5px; } 
+.sprite.icon_back { background-position: 0px -30px; width: 17px; height: 23px;  } 
+.sprite.icon_fax { background-position: 0px -58px; width: 25px; height: 25px; padding-right: 5px; } 
+.sprite.icon_fb { background-position: 0px -88px; width: 45px; height: 45px;  } 
+.sprite.icon_mail { background-position: 0px -138px; width: 25px; height: 25px; padding-right: 5px; } 
+.sprite.icon_next { background-position: 0px -168px; width: 17px; height: 23px;  } 
+.sprite.icon_patient_page { background-position: 0px -196px; width: 14px; height: 12px;  } 
+.sprite.icon_phone { background-position: 0px -213px; width: 25px; height: 25px; padding-right: 5px; } 
+.sprite.icon_twitter { background-position: 0px -243px; width: 45px; height: 45px;  } 
+.sprite.sepe_line { background-position: 0px -293px; width: 285px; height: 1px;  } 
+.sprite.testi_1 { background-position: 0px -299px; width: 80px; height: 80px;  } 
+.sprite.testi_2 { background-position: 0px -384px; width: 80px; height: 80px;  } 
+.sprite.typo_1 { background-position: 0px -469px; width: 236px; height: 112px;  }
+
+.address-block{
+    margin: 20px 10px 0 0;
 }
 
-.newslettlers_wrapper .container .meta{
-    border-top: 1px solid #e7e7e7;
+.address-block .phone{
+    padding-top:  10px;
+    font-size: 15px;
+}
+
+.address-block .fax{
+    padding-top:  10px;
+    font-size: 15px;    
+}
+.address-block .fax div{
+    padding-top: 3px;
+}
+
+.address-block .email{
+    padding-top:  10px;    
+}
+
+.address-block .email div{
+    padding-top:  5px;    
+}
+
+.working-hour{
+    margin: 20px 10px 0 0;
+    background: #abc9ed;
+    color: #FFFFFF;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.working-hour li{
+    padding: 5px;
+}
+
+.working-hour .header{
+    background: #2d78d3;
+    text-align: center;
+    font-size: 18px;
+    text-transform:uppercase;
+}
+
+.working-hour .blue{
+    background: #81aee5;
+}
+
+.working-hour li div{
+    float: left;
+    width: 125px;
+}
+
+.working-hour li div .tip{
+    font-size: 11px;
+    font-weight: normal;
+}
+
+.right-content{
+    float: left;
+}
+.page-content{
+    width: 587px;
+    background: #81aee5;
+    color: #FFFFFF;
+    float: left;
+}
+
+.page-title{
+    padding: 20px 0 0 20px;
+}
+
+.page-title .sub{
+    font-size: 30px;
+}
+
+.page-title .main{
+    font-size: 60px;
+    margin-top: -20px;
+    font-family: Verdana;
+}
+
+.detail-content{
+    padding: 15px;
+}
+
+.detail-content-location{
+    padding: 8px 0 50px;
+}
+
+.detail-content-contact{
+    padding: 8px 0 50px;
+}
+
+.detail-content-contact div{
+    background: #6B6998;
+    padding : 10px 20px 10px;
+    font-weight: bold;
+}
+
+.detail-content-contact div strong{
+    color: #E6E65E;
+}
+
+.detail-content-contact div a{
+    color: #FFF;
+    text-decoration:none; 
+}
+
+.page-content-right {
+    float: right;
+    width: 290px;
+}
+
+.testimonials-container .title {
+    padding: 20px 0 10px 15px;
+    font-weight: bold;
+    font-size: 18px;
+    color: #2d78d3;
+}
+
+.testo-detail .testo-logo{
+    float: left;
+}
+
+.testo-detail .testo-content{
+    padding-left: 90px;
+}
+
+.testo-detail .testo-content .testo-name{
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.testo-detail .testo-content .testo-text{
+    font-style: italic;
+    padding: 5px 0;
+}
+
+.testo-break-line{
+    margin: 10px 10px;
+    border-bottom: 1px dotted #000;
+}
+
+.testo-more{
+    padding: 5px 0 0 90px;
+    font-weight: bold;
+    font-size: 18px;
+}
+
+#testo_more_next{
+ cursor: pointer;
+ margin-right: 20px;   
+}
+
+#testo_more_back{
+ cursor: pointer;
+ margin-right: 10px   
+}
+
+.core-value-box{
+    padding: 30px 0 0 0;
+}
+
+.copyright-block {
+    padding: 20px 0 15px;
+    text-align: center;
+    color:#b1c8e3; 
+    font-weight: bold;
+    font-size:14px;
+}
+
+.facebook-plugin-block{
+    margin: 15px 0 0 0;
+    float: right;
+    background: #FFF;
+}
+
+.facebook-plugin-block .title{
+    padding:  5px 0;
+    background: #2d78d3;
     text-align: center;
     font-weight: bold;
-    color: #37627d;
-    padding: 6px 5px 7px;
+    font-size: 16px;
+    color: #FFF;
+}
+
+.staff-detail{
+    
+}
+
+.purple-bg {
+    background: #6B6998;
+}
+.staff-photo {
+    float: left;
+    padding: 10px 20px 10px 15px;
+}
+
+.staff-photo img {
+    border: 5px solid #B3CEEF;
+}
+
+.purple-bg .staff-photo img {
+    border: 5px solid #A4A2C6;
+}
+
+.staff-info{
+    padding:  30px 20px 10px;
+}
+
+.staff-info div{
+    padding: 15px 0 0 0;
+    font-size: 14px;
+    
+}
+
+.faq-detail{
+    padding: 18px 15px;
+}
+
+.faq-detail .question{
+    font-weight: bold;
+}
+
+.faq-detail .answer{
+    padding-top: 10px;
+}
+
+.news-detail{
+    padding: 18px 15px;
+}
+
+.news-detail a{
+    color: #FFF;
+    text-decoration:none;    
+}
+
+.news-detail div{    
+    font-style: italic;
+    text-align: right;
+}
+
+.links-detail{
+    padding: 18px 15px;
+}
+
+.links-detail a{
+    color: #E6E65E;
+    text-decoration:none;    
+    font-weight: bold;
 }
