--- a/application/views/scripts/index/contact.phtml
+++ b/application/views/scripts/index/contact.phtml
@@ -1,15 +1,29 @@
-<div class="left-content">
-	<div class="top-banner-normal">
-		<img src="/images/contact_banner.jpg"/>
-	</div>
-	<div class="page-title">
-		<h1> <?php echo _t("LBL_MENU_Contact us");?> </h1>
-		<hr/>
-		<span>
-			<i>“<?php echo _t('LBL_Where Your Family’s Health Is Protected');?>”</i>
-		</span>
-	</div>
-	<div class="page-content">
-		<?php echo $this->body; ?>
-	</div>
+<div class="page-content">
+    <div class="page-title">
+        <div class="sub">How could</div>
+        <div class="main">we be reached?</div>
+        </div>                    
+    <div class="detail-content-contact">                        
+        <div>
+            <?php echo $this->body; ?>
+		<!--
+        <p>
+	        <strong>Address:</strong> 1930&nbsp;Rt. 70&nbsp;E. G-38 (Executive Mews)<br>
+	        Cherry Hill, NJ 08003-2150<br>
+	        <br>
+	        <strong>Phone:</strong> 856)520-8718<br>
+	        <strong>Fax:</strong> 856)520-8719<br>
+	        <br>
+	        <strong>Appointments in Korean:</strong> 856)873-3266</p>
+        <p>
+	        <br>
+	        <strong>Facebook:</strong> <a href="http://www.facebook.com/pages/Kwak-Family-Medicine-PC/158413460880351">http://www.facebook.com/pages/Kwak-Family-Medicine-PC/158413460880351</a><br>
+	        <br>
+	        <strong>Twitter:</strong> <a href="http://twitter.com/jameskwakmd">http://twitter.com/jameskwakmd</a></p>
+        <p>
+            <br>
+	        <strong>Email:</strong> <a href="mailto:kwak.family.medicine@hotmail.com">kwak.family.medicine@hotmail.com</a></p>
+        -->
+	    </div>
+    </div>          
 </div>
