--- a/application/views/scripts/index/faq.phtml
+++ b/application/views/scripts/index/faq.phtml
@@ -1,8 +1,9 @@
-<div class="left-content">
-	<div class="top-banner-normal">
-		<img src="/images/faq_banner.png" width="648px"/>
-	</div>
-	<div class="page-content">
-		<?php echo $this->body; ?>
-	</div>
+<div class="page-content">
+    <div class="page-title">
+        <div class="sub">How could we</div>
+        <div class="main">response you</div>
+        </div>                    
+    <div class="detail-content-faq">                        
+        <?php echo $this->body; ?>
+    </div>          
 </div>
