--- a/application/views/scripts/index/staff.phtml
+++ b/application/views/scripts/index/staff.phtml
@@ -1,75 +1,59 @@
-<div class="left-content">
-	<div class="news-header">
-        <img src="/images/common_banner.jpg"/>
-	<!--<img src="/images/staff_banner.jpg?v=2"/>-->
-	  <!--<h1><?php echo _t("LBL_MENU_Staff");?></h1> -->
-	</div>
-	<div class="page-content">
-		<div class="biographies">
-			<div class="item first">
-				<h3>Mi-yeong Rettig</h3>
-				<div class="item-summary">
-					<p>A former English teacher from South Korea, Mi-yeong is in charge of our referrals/precertifications.  She has helped many of our Korean patients get the help they need as they move in and out of complicated medical systems.  Mi-Yeong is also transitioning to becoming our office manager.  She and her husband, David live in Somerdale.  They are both avid baseball fans.</p>
+ <div class="page-content">
+    <div class="page-title">
+        <div class="sub">Who we are</div>
+        <div class="main">as a team</div>
+        </div>
+    <div class="detail-content-staff">
+        <div class="staff-detail purple-bg">
+            <div class="staff-photo">
+                <img src="/images/staff/Mi-yeong_Rettig.jpg" alt="Mi-yeong Rettig photo">
+            </div>
+            <div class="staff-info">
+                <h3>Mi-yeong Rettig</h3>
+                <div>
+					A former English teacher from South Korea, Mi-yeong is in charge of our referrals/precertifications.
+                    She has helped many of our Korean patients get the help they need as they move in and out of complicated medical systems.
+                    Mi-Yeong is also transitioning to becoming our office manager. She and her husband, David live in Somerdale.
+                    They are both avid baseball fans.
 				</div>
-				<div class="item-assets">
-					<div class="">
-					<img src="/images/staff/Mi-yeong_Rettig.jpg"/>
-					</div>
+            </div>
+            <div class="clr"></div>
+        </div>                        
+        <div class="staff-detail">
+            <div class="staff-photo">
+                <img src="/images/staff/Ashley_Cuifolo.jpg" alt="Ashley Cuifolo photo">
+            </div>
+            <div class="staff-info">
+                <h3>Ashley Cuifolo</h3>
+                <div>
+					Ashley also wears many hats at KFM – she is a trained phlebotomist; serves as medical assistant and front desk. She is also competent in referrals and precerts. Ashley and her significant other have one daughter and one son.
 				</div>
-				<div class="clr"></div>
-			</div>
-			<!--
-            <div class="item first">
-				<h3>Christina Garbarino</h3>
-				<div class="item-summary">
-					<p>Christina has worn many hats at KFM, first starting out as our medical assistant; she is now in charge of our billing while still overseeing our medical assistants.  Christina is never stirred, always cool.  She and her significant other have two twin girls.</p>
+            </div>
+            <div class="clr"></div>
+        </div>
+        <div class="staff-detail purple-bg">
+            <div class="staff-photo">
+                <img src="/images/staff/Claire_Kim.jpg" alt="Claire Kim photo">
+            </div>
+            <div class="staff-info">
+                <h3>Claire Kim</h3>
+                <div>
+					Claire joined Kwak Family Medicine, PC in '13 and has been playing many vital roles as a medical assistant and administrative assistant. She is quiet and a hard worker.
 				</div>
-				<div class="item-assets">
-					<div class="">
-					<img src="/images/staff/Christina_Garbarino.jpg"/>
-					</div>
+            </div>
+            <div class="clr"></div>
+        </div>
+        <div class="staff-detail">
+            <div class="staff-photo">
+                <img src="/images/staff/Charles_Lim.jpg" alt="Charles Lim photo">
+            </div>
+            <div class="staff-info">
+                <h3>Charles Lim</h3>
+                <div>
+					Charles has been assisting Ashley in billing but you'll see him involved in many other aspects of patient care. He is from California originally and is planning to go to medical school.
 				</div>
-				<div class="clr"></div>
-			</div>
-            -->
-			<div class="item first">
-				<h3>Ashley Cuifolo</h3>
-				<div class="item-summary">
-					<p>Ashley also wears many hats at KFM – she is a trained phlebotomist; serves as medical assistant and front desk.  She is also competent in referrals and precerts.  Ashley and her significant other have one daughter and one son.</p>
-				</div>
-				<div class="item-assets">
-					<div class="">
-					<img src="/images/staff/Ashley_Cuifolo.jpg"/>
-					</div>
-				</div>
-				<div class="clr"></div>
-			</div>
-       
-            <div class="item first">
-				<h3>Claire Kim</h3>
-				<div class="item-summary">
-					<p>Claire joined Kwak Family Medicine, PC in '13 and has been playing many vital roles as a medical assistant and administrative assistant. She is quiet and a hard worker.</p>
-				</div>
-				<div class="item-assets">
-					<div class="">
-					<img src="/images/staff/Claire Kim.jpg"/>
-					</div>
-				</div>
-				<div class="clr"></div>
-			</div>
-
-			<div class="item first">
-				<h3>Charles Lim</h3>
-				<div class="item-summary">
-					<p>Charles has been assisting Ashley in billing but you'll see him involved in many other aspects of patient care. He is from California originally and is planning to go to medical school.</p>
-				</div>
-				<div class="item-assets">
-					<div class="">
-					<img src="/images/staff/Charles_Lim.jpg"/>
-					</div>
-				</div>
-				<div class="clr"></div>
-			</div>
-		</div>
-	</div>
+            </div>
+            <div class="clr"></div>
+        </div>
+    </div>                    
 </div>
