--- a/application/views/scripts/node/detail.phtml
+++ b/application/views/scripts/node/detail.phtml
@@ -1,6 +1,6 @@
 <script type="text/javascript" src="/ckeditor/ckeditor.js"></script>
 <script type="text/javascript" src="/js/node.js"></script>
-<div class="left-content">
+<div  class="admin-container">
 	<div>
 		<h1 style="text-align:left"><?php echo ($this->node_id ? 'Edit' : 'New') ?> <?php echo $this->node_type; ?></h1>
 		<div>
