--- a/application/views/scripts/node/detailconfirm.phtml
+++ b/application/views/scripts/node/detailconfirm.phtml
@@ -1,4 +1,4 @@
-<div class="left-content">
+<div class="admin-container">
 	<div>
 		<h1 style="text-align:left"><?php echo ($this->editMode ? 'Edit' : 'New') ?> <?php echo $this->node_type;?></h1>
 		<div>
