--- a/application/views/scripts/node/index.phtml
+++ b/application/views/scripts/node/index.phtml
@@ -1,4 +1,4 @@
-<div class="left-content">
+<div class="admin-container">
 	<div>
 		<h1 style="text-align:left"><?php echo ucfirst($this->node_type);?> Content Management</h1>
 		<div>
