--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,13 +1,19 @@
-<div class="detail-content">     
-	<div style="margin:-5px 0 10px 10px;position: relative;cursor:pointer;">
-        <a href="http://www.youtube.com/watch?v=rDl-XQs3Sug" rel="prettyPhoto">
-        <div style="position: absolute;left:217px;top:110px;">
-            <img width="120" alt="Welcome to Kwak Family Medicine video" src="/images/play_movie_icon.png"/>
-        </div>
-		<img width="537" alt="Welcome to Kwak Family Medicine video" src="/images/welcome_video.jpg"/>
-        </a>		
-	</div>
-	<?php echo $this->body; ?>
+<div class="page-content">
+    <div class="page-title">
+        <div class="sub">Welcome to</div>
+        <div class="main">our site</div>
+    </div>
+    <div class="detail-content">     
+	    <div style="margin:-5px 0 10px 10px;position: relative;cursor:pointer;">
+            <a href="http://www.youtube.com/watch?v=rDl-XQs3Sug" rel="prettyPhoto">
+            <div style="position: absolute;left:217px;top:110px;">
+                <img width="120" alt="Welcome to Kwak Family Medicine video" src="/images/play_movie_icon.png"/>
+            </div>
+		    <img width="537" alt="Welcome to Kwak Family Medicine video" src="/images/welcome_video.jpg"/>
+            </a>		
+	    </div>
+	    <?php echo $this->body; ?>
+    </div>
 </div>
 <script type="text/javascript" charset="utf-8">
 $(document).ready(function(){
