--- a/application/views/scripts/index/insurance.phtml
+++ b/application/views/scripts/index/insurance.phtml
@@ -1,15 +1,14 @@
-<div class="left-content">
-	<div class="top-banner-normal">
-		<img src="/images/common_banner.jpg" width="648"/>
-	</div>
-	<div class="page-title">
-		<h1> <?php echo _t("LBL_MENU_Insurance");?> </h1>
-		<hr/>
-		<span>
-			<i>“<?php echo _t('LBL_Where Your Family’s Health Is Protected');?>”</i>
-		</span>
-	</div>
-	<div class="page-content">
-		<?php echo $this->body; ?>
-	</div>
+<div class="page-content">
+    <div class="page-title">
+        <div class="sub">What about</div>
+        <div class="main">insurance?</div>
+        </div>                    
+    <div class="detail-content-contact">                        
+        <div>    
+		    <?php echo $this->body; ?>            
+            <p>
+	            &nbsp;</p>
+	
+	    </div>
+    </div>          
 </div>
