--- a/application/views/scripts/index/links.phtml
+++ b/application/views/scripts/index/links.phtml
@@ -1,15 +1,9 @@
-<div class="left-content">
-	<div class="top-banner-normal">
-		<img src="/images/links_banner.jpg" width="648"/>
-	</div>
-	<div class="page-title">
-		<h1> <?php echo _t("LBL_MENU_Links");?> </h1>
-		<hr style="border: 1px solid #000;"/>
-		<span>
-			<i>“<?php echo _t('LBL_Where Your Family’s Health Is Protected');?>”</i>
-		</span>
-	</div>
-	<div class="page-content">
-		<?php echo $this->body; ?>
-	</div>
+<div class="page-content">
+    <div class="page-title">
+        <div class="sub">You should</div>
+        <div class="main">know them</div>
+        </div>                    
+    <div class="detail-content-news">
+        <?php echo $this->body; ?>
+    </div>
 </div>
