--- a/application/views/scripts/index/location.phtml
+++ b/application/views/scripts/index/location.phtml
@@ -1,31 +1,31 @@
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script type="text/javascript">
-  function initialize() {
-    var myLatlng = new google.maps.LatLng(39.901761, -74.964883);
-    var myOptions = {
-      zoom: 12,
-      center: myLatlng,
-      mapTypeId: google.maps.MapTypeId.ROADMAP
-    }
-    var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
-    var marker = new google.maps.Marker({
-        position: myLatlng, 
-        map: map,
-        title:"Kwak Family Medicine, PC"
-    });
-  }
-</script>
-
-<div class="left-content">
-	<div class="top-banner-normal">
-		<div id="map_canvas" style="width:648px;height:400px"></div>
-	</div>
-	<div class="page-content">
-		
-	</div>
+<div class="page-content">
+    <div class="page-title">
+        <div class="sub">We woud welcome</div>
+        <div class="main">you here</div>
+        </div>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript">
+        function initialize() {
+        var myLatlng = new google.maps.LatLng(39.901761, -74.964883);
+        var myOptions = {
+            zoom: 12,
+            center: myLatlng,
+            mapTypeId: google.maps.MapTypeId.ROADMAP
+        }
+        var map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+        var marker = new google.maps.Marker({
+            position: myLatlng, 
+            map: map,
+            title:"Kwak Family Medicine, PC"
+        });
+        }
+    </script>
+    <script type="text/javascript">
+	    window.onload = function(){
+		    initialize();
+	    };
+    </script>
+    <div class="detail-content-location">
+        <div id="map_canvas" style="width:587px;height:400px"></div>
+    </div>          
 </div>
-<script type="text/javascript">
-	window.onload = function(){
-		initialize();
-	};
-</script>
