add newsletter and forms page

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -171,7 +171,7 @@
                         </li>
                  </ul>
                 </div>
-                <div class="banner-image index-banner">
+                <div class="banner-image <?= ($this->controller != 'index') ? 'index' : $this->action ?>-banner">
                     <div class="banne-slogan">
                         <div>WHERE YOUR FAMILY'S HEALTH IS PROTECTED</div>
                     </div>
