--- a/application/views/scripts/index/forms.phtml
+++ b/application/views/scripts/index/forms.phtml
@@ -1,15 +1,11 @@
-<div class="left-content">
-	<div class="top-banner-normal">
-		<img src="/images/forms_banner.jpg"/>
-	</div>
-	<div class="page-title">
-		<h1> <?php echo _t("LBL_MENU_Forms");?> </h1>
-		<hr/>
-		<span>
-			<i><?php echo _t('LBL_Where Your Family’s Health Is Protected');?></i>
-		</span>
-	</div>
-	<div class="page-content">
-		<?php echo $this->body; ?>
-	</div>
+<div class="page-content">
+    <div class="page-title">
+        <div class="sub">How could</div>
+        <div class="main">we be reached?</div>
+        </div>                    
+    <div class="detail-content-forms">                        
+        <div>
+            <?php echo $this->body; ?>
+	    </div>
+    </div>          
 </div>
