--- a/application/views/scripts/index/login.phtml
+++ b/application/views/scripts/index/login.phtml
@@ -1,4 +1,7 @@
-<div class="detail-content">     
+<div class="page-content">                   
+    <div class="detail-content-index">                        
+        <div style="padding: 30px 0;">
+            	    
     <div style="text-align: center; vertical-align: middle;" class="login-cont">
 		<form method="post" action="/index/login" name="login_form" id="login_form" class="login-block">
 			<div class="login-title">Login</div>
@@ -6,9 +9,11 @@
 			<label>Username:</label> <input type="text" name="username"><br>					
 			<label>Password:</label> <input type="password" name="password"><br><br>
 			<label> </label><input type="submit" value="Login" style="width:50px;">&nbsp;&nbsp; <input type="reset" value="Reset" style="width:50px;">
-			<input type="submit" style="background: none repeat scroll 0% 0% rgb(255, 255, 255); border: 0pt none;" value="">
 			<br>
 			<label> </label>
 		</form>
-	</div>
+	</div>        
+        
+        </div>
+    </div>          
 </div>
